# kaggle

./: README.md  hull_tactical_prediction.ipynb  pyproject.toml  requirements.txt  setup_uv.sh  submission.csv
